			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02o: *********************************

IMP: (05/25/05, DN) "regression/tools/gateLayGen/scripts/mocmosDrc.bsh" and
  "regression/tools/IO/scripts/*.bsh" are refreshed.

IMP: (05/25/05, DN) TextDescriptor now keeps "isDisplay" and "Code" fields also.
  "Variable.flags" field removed.ImmutableTextDescriptor is used in database.
  Additional versions of "ElectricObject.newVar" added:
  "newVar(key,value,td)" creates variable with specified descriptor.
  "newVar(key,value,boolean)" creates either displayable or non-displayable variable.
  "newDisplayVar(key,value)" creates displayable variable.
  "newVar(key,value)" creates non-displayable variable (as earlier)
  Warning: "Variable.setTextDescriptor(td)" now changes "isDisplay" and "getCode".

IMP: (05/24/05, GVG) Extra M5M8 contact in TSMC90 for CMP foundry

IMP: (05/24/05, RK) NCC, Bug# 339: Add I/O 25, 33 transistors. Modify regressions to test. Wait to add Native 18, 25, 33 NMOS to regressions until Lexau adds these to Orange library.

BUG: (05/19/05, SMR) New windows appear with their contents too small.
FIX: In WindowFrame.createEditWindow(), get proper window size.

BUG: (05/23/05, GVG) Fix for DRC bug #312 (didn't detect small feature)
FIX: Check small feature even if polygons are connected.

IMP: (05/23/05, GVG) New size for native transistors

BUG: (05/23/05, GVG) Motion indicator in tool bar set wrongly on startup (Bug #337)
FIX: There was no setup in ToolBar, changes in EditMenu didn't change ToolBar values and changes in
GridAndAligment didn't change ToolBar/EditMenu buttons.

BUG: (05/23/05, GVG) TSMC90 layers not in the correct order (Bug #336)
FIX: Error in TSMC90.getContactFunction().

BUG: (05/20/05, GVG) DRC doesn't detect overlap between PWell/NWell when nodes are connected (Bug #333)
FIX: Transform UCONSPA into SPACING rule (TSMC90: NW.S.0, MoCMOS: 1.4
